[package]
name = "mil2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.7"
anyhow = "1.0.79"
derivative = "2.2.0"
either = "1.9.0"
ethnum = "1.5.0"
imbl = "2.0.3"
sharded-slab = "0.1.7"

smol_str = "0.2.0"
tap = "1.0.1"
tracing = "0.1.40"
tracing-test = "0.2.4"
